# sot-openhrp-scripts

./: .gitmodules  CMakeLists.txt  INSTALL  NEWS  README  README.md  index.html  sot-openhrp-scripts.pc.cmake
CMakeModules/: AddPluginForOpenHRP.cmake  FindOpenHRP.cmake
debian/: changelog  control  copyright  rules  sot-openhrp-scripts-hrp2-14.install  sot-openhrp-scripts.doc-base
doc/: Doxyfile.extra.in  footer.html  header.html  package.dox.cmake
doc/additionalDoc/: package.hh
doc/pictures/: footer.txt
doxygen/HEAD/: graph_legend.html  index.html  main.html  tree.html
projects-openhrp/: CMakeLists.txt  hrp2_10-sot.xml.cmake  hrp2_14-sot-robot.xml.cmake  hrp2_14-sot-simu.xml.cmake  hrp2jrl-sot-robot.xml.cmake  hrp2jrl-sot-simu.xml.cmake
scripts-openhrp/: CMakeLists.txt  TestHWPGinSOT.py.cmake  TestStackOfTasks.py.cmake  TestStackOfTasksV3.py.cmake  abstract_experiment.py  abstract_experiment.py.cmake  default.py  demoBSCWreviewmeeting.py.cmake  hrp2_10-default.py  hrp2_10-default.py.cmake  sotGeometry.py.cmake  sotSOTH.py.cmake  sotTaskLearning.py.cmake  sotTeleopV3.py.cmake  sotTeleopV3nonemodal.py.cmake  sotTutorial.py.cmake  sotWalkTask.py.cmake  sotWalkTaskDemoROBOTatCWE.py.cmake  sotWalkTaskGeometry.py.cmake  sot_plugin.py.cmake  tutorial.py
scripts-openhrp/deprecated/: TestStackOfTasks.py.cmake  TestStackOfTasksV3.py.cmake  demoBSCWreviewmeeting.py.cmake  sotGeometry.py.cmake  sotSOTH.py.cmake  sotTeleopV3.py.cmake  sotTeleopV3nonemodal.py.cmake  sotTutorial.py.cmake  sotWalkTask.py.cmake  sotWalkTaskDemoROBOTatCWE.py.cmake  sot_plugin.py.cmake
scripts-sot/: CMakeLists.txt  acc  acchrp2_10  base  base.cmake  base.cmake.old  base.in  calib  calibhrp2_10  clamp-workspace  cmake_install.cmake  collisiondetection  collisiondetection.cmake  coshell  coshell.cmake  detrace.awk  dyn  dyn.cmake  dynfiles  dynfiles.cmake  dynfilessmall  dynfilessmall.cmake  dynfilessmallhrp2_10  dynfilessmallhrp2_10.cmake  dynfilessmallhrp2_10_old  dynfilessmallhrp2_10_old.cmake  dynmc  dynmc.cmake  dynsmall  dynsmall.cmake  dynsmallpart1hrp2_10  dynsmallpart1hrp2_10.cmake  dynsmallpart1hrp2_10_old  dynsmallpart1hrp2_10_old.cmake  dynsmallpart2  dynsmallpart2hrp2_10  force  forceL  forceLhrp2_10  forceSimu  (+44 more)
scripts-sot/hri/: hri
scripts-sot/optimization/: frigo  frigoSmall  frigoSmall.cmake  frigoSmallhrp2_10_small.cmake  frigohrp2_10_small
scripts-sot/stab/: flex  flexibility  flexibility.cmake  sylvain
scripts-sot/taskLearning/: taskLearning  taskLearning.cmake
scripts-sot/teleoperation/: data_epfl  data_tum  firfilter  initConnec  initConnecAll  initConnecPhantom  initConnecVFwave  teleop  teleopAll  teleopVFwave  teleop_traces  teleophrp2_10  teleophrp2_small
scripts-sot/unittests/: chrono  chronoQr  chronoQr.cmake  ik_arm  ik_arm_sensor  ik_arm_sensor_passive  ik_arm_sensor_vel  ik_com  ik_jl_arm  readme  sotUnit.py  testInertia  testInertia.cmake
scripts-sot/walking/: circle  hwpgfeettasks  hwpgfeettasksrel  hwpgfeettasksrel.cmake  hwpgjoints  hwpgjointsbscw  hwpgjointsteleop  hwpgreact  hwpgrefs  startherdt  startherdtsteppos  stepping  teststeps  teststeps2  teststeps3  teststeps3small  walk  walkreact
share/applications/: sot-openhrp.desktop.cmake
share/pixmaps/: sot-openhrp.xpm
unitTesting/: CMakeLists.txt  main.cc  sot-openhrp-scripts-test.cc  sot-openhrp-scripts-test.hh
